use String::formatted and StringJoiner instead